===============================================================================
UBMoD - ChangeLog
===============================================================================

* 2007-11-11
	* Initial public release